@@ -37,7 +37,11 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 
+import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
 import androidx.annotation.VisibleForTesting;
+
+import static com.ichi2.libanki.stats.Stats.SECONDS_PER_DAY;
 
 /**
  A Card is the ultimate entity subject to review; it encapsulates the scheduling parameters (from which to derive
@@ -72,10 +76,11 @@ public class Card implements Cloneable {
     public static final int TYPE_REV = 2;
 
     private Collection mCol;
-    private double mTimerStarted;
+    // When timer was started, in MS
+    private long mTimerStarted;
 
-    // Not in LibAnki. Record time spent reviewing in order to restore when resuming.
-    private double mElapsedTime;
+    // Not in LibAnki. Record time spent reviewing in MS in order to restore when resuming.
+    private long mElapsedTime;
 
     // BEGIN SQL table entries
     private long mId;
@@ -117,7 +122,7 @@ public class Card implements Cloneable {
 
     public Card(Collection col, Long id) {
         mCol = col;
-        mTimerStarted = Double.NaN;
+        mTimerStarted = 0L;
         mQA = null;
         mNote = null;
         if (id != null) {
@@ -125,7 +130,7 @@ public class Card implements Cloneable {
             load();
         } else {
             // to flush, set nid, ord, and due
-            mId = Utils.timestampID(mCol.getDb(), "cards");
+            mId = mCol.getTime().timestampID(mCol.getDb(), "cards");
             mDid = 1;
             mType = Consts.CARD_TYPE_NEW;
             mQueue = Consts.QUEUE_TYPE_NEW;
@@ -143,7 +148,7 @@ public class Card implements Cloneable {
 
 
     public void load() {
-        try (Cursor cursor = mCol.getDb().getDatabase().query("SELECT * FROM cards WHERE id = " + mId, null)) {
+        try (Cursor cursor = mCol.getDb().query("SELECT * FROM cards WHERE id = ?", mId)) {
             if (!cursor.moveToFirst()) {
                 throw new WrongId(mId, "card");
             }
@@ -178,14 +183,14 @@ public class Card implements Cloneable {
 
     public void flush(boolean changeModUsn) {
         if (changeModUsn) {
-            mMod = Utils.intTime();
+            mMod = getCol().getTime().intTime();
             mUsn = mCol.usn();
         }
         // bug check
         //if ((mQueue == Consts.QUEUE_TYPE_REV && mODue != 0) && !mCol.getDecks().isDyn(mDid)) {
             // TODO: runHook("odueInvalid");
         //}
-        assert (mDue < Long.valueOf("4294967296"));
+        assert (mDue < Long.parseLong("4294967296"));
         mCol.getDb().execute(
                 "insert or replace into cards values " +
                 "(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
@@ -213,13 +218,13 @@ public class Card implements Cloneable {
 
 
     public void flushSched() {
-        mMod = Utils.intTime();
+        mMod = getCol().getTime().intTime();
         mUsn = mCol.usn();
         // bug check
         //if ((mQueue == Consts.QUEUE_TYPE_REV && mODue != 0) && !mCol.getDecks().isDyn(mDid)) {
             // TODO: runHook("odueInvalid");
         //}
-        assert (mDue < Long.valueOf("4294967296"));
+        assert (mDue < Long.parseLong("4294967296"));
 
         ContentValues values = new ContentValues();
         values.put("mod", mMod);
@@ -236,7 +241,7 @@ public class Card implements Cloneable {
         values.put("odid", mODid);
         values.put("did", mDid);
         // TODO: The update DB call sets mod=true. Verify if this is intended.
-        mCol.getDb().update("cards", values, "id = " + mId, null);
+        mCol.getDb().update("cards", values, "id = ?", new String[] {Long.toString(mId)});
         mCol.log(this);
     }
 
@@ -262,7 +267,7 @@ public class Card implements Cloneable {
 
 
     public String css() {
-        return String.format(Locale.US, "<style>%s</style>", model().get("css"));
+        return String.format(Locale.US, "<style>%s</style>", model().getString("css"));
     }
 
 
@@ -324,7 +329,7 @@ public class Card implements Cloneable {
 
 
     public void startTimer() {
-        mTimerStarted = Utils.now();
+        mTimerStarted = getCol().getTime().intTimeMS();
     }
 
 
@@ -341,14 +346,14 @@ public class Card implements Cloneable {
      * Time taken to answer card, in integer MS.
      */
     public int timeTaken() {
-        int total = (int) ((Utils.now() - mTimerStarted) * 1000);
+        // Indeed an int. Difference between two big numbers is still small.
+        int total = (int) (getCol().getTime().intTimeMS() - mTimerStarted);
         return Math.min(total, timeLimit());
     }
 
 
     public boolean isEmpty() {
-        ArrayList<Integer> ords = mCol.getModels().availOrds(model(), note().getFields());
-        return !ords.contains(mOrd);
+        return Models.emptyCard(model(), mOrd, note().getFields());
     }
 
 
@@ -384,7 +389,7 @@ public class Card implements Cloneable {
      * method when the session resumes to start counting review time again.
      */
     public void stopTimer() {
-        mElapsedTime = Utils.now() - mTimerStarted;
+        mElapsedTime = getCol().getTime().intTimeMS() - mTimerStarted;
     }
 
 
@@ -397,10 +402,14 @@ public class Card implements Cloneable {
      * or the result of timeTaken() will be wrong.
      */
     public void resumeTimer() {
-        mTimerStarted = Utils.now() - mElapsedTime;
+        mTimerStarted = getCol().getTime().intTimeMS() - mElapsedTime;
     }
 
-    public void setTimerStarted(double timeStarted){ mTimerStarted = timeStarted; }
+
+    /**
+     * @param timeStarted Time in MS when timer was started
+     */
+    public void setTimerStarted(long timeStarted){ mTimerStarted = timeStarted; }
 
     public long getId() {
         return mId;
@@ -614,7 +623,7 @@ public class Card implements Cloneable {
     public static final Set<String> SKIP_PRINT = new HashSet<>(Arrays.asList("SKIP_PRINT", "$assertionsDisabled", "TYPE_LRN",
             "TYPE_NEW", "TYPE_REV", "mNote", "mQA", "mCol", "mTimerStarted", "mTimerStopped"));
 
-    public String toString() {
+    public @NonNull String toString() {
         List<String> members = new ArrayList<>();
         for (Field f : this.getClass().getDeclaredFields()) {
             try {
@@ -690,11 +699,11 @@ public class Card implements Cloneable {
         } else if (getQueue() == Consts.QUEUE_TYPE_LRN) {
             date = due;
         } else if (getQueue() == Consts.QUEUE_TYPE_NEW || getType() == Consts.CARD_TYPE_NEW) {
-            return (new Long(due)).toString();
+            return (Long.valueOf(due)).toString();
         } else if (getQueue() == Consts.QUEUE_TYPE_REV || getQueue() == Consts.QUEUE_TYPE_DAY_LEARN_RELEARN || (getType() == Consts.CARD_TYPE_REV && getQueue() < 0)) {
-            long time = System.currentTimeMillis() / 1000L;
+            long time = mCol.getTime().intTime();
             long nbDaySinceCreation = (due - getCol().getSched().getToday());
-            date = time + (nbDaySinceCreation * 86400L);
+            date = time + (nbDaySinceCreation * SECONDS_PER_DAY);
         } else {
             return "";
         }
@@ -714,5 +723,107 @@ public class Card implements Cloneable {
 
     public boolean isNew() {
         return this.getType() == Consts.CARD_TYPE_NEW;
+    }
+
+    /** A cache represents an intermediary step between a card id and a card object. Creating a Card has some fixed cost
+     * in term of database access. Using an id has an unknown cost: none if the card is never accessed, heavy if the
+     * card is accessed a lot of time. CardCache ensure that the cost is paid at most once, by waiting for first access
+     * to load the data, and then saving them. Since CPU and RAM is usually less of a bottleneck than database access,
+     * it may often be worth using this cache.
+     *
+     * Beware that the card is loaded only once. Change in the database are not reflected, so use it only if you can
+     * safely assume that the card has not changed. That is
+     * long id;
+     * Card card = col.getCard(id);
+     * ....
+     * Card card2 = col.getCard(id);
+     * is not equivalent to
+     * long id;
+     * Card.Cache cache = new Cache(col, id);
+     * Card card = cache.getCard();
+     * ....
+     * Card card2 = cache.getCard();
+     *
+     * It is equivalent to:
+     * long id;
+     * Card.Cache cache = new Cache(col, id);
+     * Card card = cache.getCard();
+     * ....
+     * cache.reload();
+     * Card card2 = cache.getCard();
+     */
+    public static class Cache implements Cloneable {
+        @NonNull
+        private final Collection mCol;
+        private final long mId;
+        @Nullable
+        private Card mCard;
+
+        public Cache(@NonNull Collection col, long id) {
+            mCol = col;
+            mId = id;
+        }
+
+        /** Copy of cache. Useful to create a copy of a subclass without loosing card if it is loaded. */
+        protected Cache(Cache cache) {
+            mCol = cache.mCol;
+            mId = cache.mId;
+            mCard = cache.mCard;
+        }
+
+        /** Copy of cache. Useful to create a copy of a subclass without loosing card if it is loaded. */
+        public Cache(Card card) {
+            mCol = card.mCol;
+            mId = card.getId();
+            mCard = card;
+        }
+
+        /**
+         * The card with id given at creation. Note that it has content of the time at which the card was loaded, which
+         * may have changed in database. So it is not equivalent to getCol().getCard(getId()). If you need fresh data, reload
+         * first.*/
+        @NonNull
+        public synchronized Card getCard() {
+            if (mCard == null) {
+                mCard = mCol.getCard(mId);
+            }
+            return mCard;
+        }
+
+        /** Next access to card will reload the card from the database. */
+        public synchronized void reload() {
+            mCard = null;
+        }
+
+        public long getId() {
+            return mId;
+        }
+
+        @NonNull
+        public Collection getCol() {
+            return mCol;
+        }
+
+        @Override
+        public int hashCode() {
+            return Long.valueOf(mId).hashCode();
+        }
+
+        /** The cloned version represents the same card but data are not loaded. */
+        @NonNull
+        public Cache clone() {
+            return new Cache(mCol, mId);
+        }
+
+        public boolean equals(Object cache) {
+            if (!(cache instanceof Cache)) {
+                return false;
+            }
+            return mId == ((Cache) cache).mId;
+        }
+
+        public void loadQA(boolean reload, boolean browser) {
+            getCard()._getQA(reload, browser);
+        }
     }
 }
